--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>One platform to connect || Confexio</title>
-    <link rel="icon" href="feviconIcon.png">
+    <link rel="icon" href="/feviconIcon.png">
   </head>
   <body>
     <div id="root"></div>
